<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmenu"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_gameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="-80dp"
        android:gravity="center_horizontal|top"
        android:text="@string/txt_gameTitle"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="80dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:ems="11"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/txt_nickname"
            android:inputType="text"
            android:maxLength="10"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txt_quantityCharacters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="-40dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:gravity="end"
            android:text="0 / 10" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/txt_start" />

        <Button
            android:id="@+id/btn_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/txt_ranking" />

        <Button
            android:id="@+id/btn_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/txt_notificaciones" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/txt_settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_sound"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="340dp"
            android:adjustViewBounds="true"
            android:background="#00FFFFFF"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/soundon" />
    </LinearLayout>

</LinearLayout>