<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_highScores3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="100dp"
            android:fontFamily="monospace"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/txt_highScores"
            android:textSize="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal|center_vertical">

            <TextView
                android:id="@+id/txt_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="30dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/txt_rank"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="30dp"
                android:autoSizeTextType="none"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/txt_name"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txt_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:height="30dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/txt_score"
                android:textSize="18dp" />

        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

    </LinearLayout>
</LinearLayout>